Minor and documentations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
 
 volumes:
   backups:
+    labels:
+      - xyz.zok.borgbackup.ignore
   config:
     labels:
       - xyz.zok.borgbackup.ignore
