--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  cronservice:
+  borg:
     image: zokradonh/borgbackup-docker
     restart: unless-stopped
     volumes:
